--- a/style.scss
+++ b/style.scss
@@ -114,7 +114,7 @@ a{
 .js-on-deck{	
 	left: 67.8%;
 	
-	@include mq(979px, max) {		
+	@include mq(980px, max) {		
 		left: 100%;
 		width: 100%;
 	}
@@ -267,6 +267,7 @@ a{
 	-o-transition: -o-transform 200ms;
 	
 	i{
+		color: #cccccc;
 		-webkit-transition: -webkit-transform 200ms;
 		-moz-transition: -moz-transform 200ms;
 		-o-transition: -o-transform 200ms;
@@ -275,48 +276,46 @@ a{
 	
 	&:hover{
 		.slider-control--btn{
-			width: 60px;
+			width: 64px;
 			background-color: rgba(0,0,0,0.8);
-		}			
+		}	
+		
+		i{
+			color: #ffffff;
+		}		
 	}
 }
 
 .slider-control__prev{
 	@extend %position--left;
 	
-	@include vendor(transform, translateX(-58px));
-	
+	@include mq(981px) {
+		@include vendor(transform, translateX(-58px));
+	}	
 	.slider-control--btn{
 		@extend %position--left;
-		
-		@include mq(979px, max) {
-			left: 10px;
-		}
 	}
 	
 	&:hover{
 		i{
-			left: -.2em;
+			left: -.4em;
 		}
 	}
 }
 
 .slider-control__next{
 	@extend %position--right;
-	
-	@include vendor(transform, translateX(58px));
+	@include mq(981px) {
+		@include vendor(transform, translateX(58px));
+	}
 	
 	.slider-control--btn{
 		@extend %position--right;
-		
-		@include mq(979px, max) {
-			right: 10px;
-		}
 	}
 	
 	&:hover{
 		i{
-			right: -.2em;
+			right: -.4em;
 		}
 	}
 }
